--- a/contacto.html
+++ b/contacto.html
@@ -9,14 +9,15 @@
 <body>
 
     <div>
-        <a href="index.html">Inicio</a>
+        <a href="index.html">Inicio (Entrevista)</a>
         <a href="integrantes.html">Integrantes</a>
         <a href="discografía.html">Discografía</a>
         <a href="historia.html">Historia</a>
     </div>
 
     <h1>
-        Contacto: +221 123456789
+        Podes contactarnos para tener más información de esta página<br>
     </h1>
+    <p>Contacto: +221 123456789</p>
 </body>
 </html>
