--- a/historia.html
+++ b/historia.html
@@ -11,7 +11,7 @@
         <a href="index.html">Inicio (Entrevista)</a>
         <a href="integrantes.html">Integrantes</a>
         <a href="discografía.html">Discografía</a>
-        <a href="conctacto.html">Contacto</a>
+        <a href="contacto.html">Contacto</a>
     </div>
 
     <h1>Historia de la banda Guasones</h1>
